fix: add meta utf8 header; fix sticky height overflow

--- a/statics/style.css
+++ b/statics/style.css
@@ -72,11 +72,11 @@ body {
 }
 
 .container.keywords.sticky {
-  min-height: 100vh;
+  min-height: 70vh;
   margin-left: 5rem;
   font-size: 4rem;
   position: sticky;
-  top: 30%;
+  top: 30vh;
   color: #000;
   /* opacity = -(2*x-1)^(2)+1 */
   /* opacity: calc(-1 * (3 * var(--percent) - 1.5) * (3 * var(--percent) - 1.5) + 2); */
